# averager

./: CMakeLists.txt  LICENSE  README.md  main.cpp  options.cpp  options.h  parser.h
