project(averager)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
set(CMAKE_CXX_FLAGS "-pedantic -Wall -Wextra")
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} boost_program_options)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
